# gitver

./: INSTALL.md  README.md  pyproject.toml
.gitver/: config
.gitver/templates/: version
gitver/: commands.py  config.py  git.py  sanity.py  termcolors.py  version.py
